crates/cypher-ast/tests/snapshots/snapshot__expr_literal_string.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 336
expression: "dump(\"RETURN 'hello'\")"
---
SourceFile(SOURCE_FILE@0..14)
  STATEMENT@0..14
    ReturnClause(RETURN_CLAUSE@0..14)
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..14
        RETURN_ITEMS@6..14
          ReturnItem(RETURN_ITEM@6..14)
            LITERAL_EXPR@6..14
              WHITESPACE@6..7 " "
              STRING_LITERAL@7..14 "'hello'"
