crates/cypher-ast/tests/snapshots/snapshot__expr_parameter.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 351
expression: "dump(\"RETURN $param\")"
---
SourceFile(SOURCE_FILE@0..13)
  STATEMENT@0..13
    ReturnClause(RETURN_CLAUSE@0..13)
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..13
        RETURN_ITEMS@6..13
          ReturnItem(RETURN_ITEM@6..13)
            PARAM_EXPR@6..13
              WHITESPACE@6..7 " "
              PARAM@7..13 "$param"
