crates/cypher-ast/tests/snapshots/snapshot__expr_paren.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 415
expression: "dump(\"RETURN (1 + 2) * 3\")"
---
SourceFile(SOURCE_FILE@0..18)
  STATEMENT@0..18
    ReturnClause(RETURN_CLAUSE@0..18)
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..18
        RETURN_ITEMS@6..18
          ReturnItem(RETURN_ITEM@6..18)
            Expr::BinaryExpr(BINARY_EXPR@6..18)
              Expr::ParenExpr(PAREN_EXPR@6..14)
                WHITESPACE@6..7 " "
                L_PAREN@7..8 "("
                Expr::BinaryExpr(BINARY_EXPR@8..13)
                  LITERAL_EXPR@8..9
                    INT_LITERAL@8..9 "1"
                  WHITESPACE@9..10 " "
                  PLUS@10..11 "+"
                  LITERAL_EXPR@11..13
                    WHITESPACE@11..12 " "
                    INT_LITERAL@12..13 "2"
                R_PAREN@13..14 ")"
              WHITESPACE@14..15 " "
              STAR@15..16 "*"
              LITERAL_EXPR@16..18
                WHITESPACE@16..17 " "
                INT_LITERAL@17..18 "3"
