crates/cypher-ast/tests/snapshots/snapshot__expr_unary_not.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 395
expression: "dump(\"MATCH (n) WHERE NOT n.active RETURN n\")"
---
SourceFile(SOURCE_FILE@0..37)
  STATEMENT@0..37
    MatchClause(MATCH_CLAUSE@0..28)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WhereClause(WHERE_CLAUSE@9..28)
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        Expr::UnaryExpr(UNARY_EXPR@15..28)
          WHITESPACE@15..16 " "
          NOT_KW@16..19 "NOT"
          PROP_ACCESS_EXPR@19..28
            VAR_EXPR@19..21
              WHITESPACE@19..20 " "
              IDENT@20..21 "n"
            DOT@21..22 "."
            IDENT@22..28 "active"
    ReturnClause(RETURN_CLAUSE@28..37)
      WHITESPACE@28..29 " "
      RETURN_KW@29..35 "RETURN"
      RETURN_BODY@35..37
        RETURN_ITEMS@35..37
          ReturnItem(RETURN_ITEM@35..37)
            VAR_EXPR@35..37
              WHITESPACE@35..36 " "
              IDENT@36..37 "n"
