crates/cypher-ast/tests/snapshots/snapshot__pattern_bound_node.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 271
expression: "dump(\"MATCH (n) RETURN n\")"
---
SourceFile(SOURCE_FILE@0..18)
  STATEMENT@0..18
    MatchClause(MATCH_CLAUSE@0..9)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    ReturnClause(RETURN_CLAUSE@9..18)
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..18
        RETURN_ITEMS@16..18
          ReturnItem(RETURN_ITEM@16..18)
            VAR_EXPR@16..18
              WHITESPACE@16..17 " "
              IDENT@17..18 "n"
